netbox/01-netbox-ns_sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbox
  labels:
    app.kubernetes.io/part-of: monitoring
    istio-injection: enabled
