netbox/05-netbox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-server
  namespace: netbox
  labels: &Labels
    app: netbox-server
    app.kubernetes.io/component: server
    app.kubernetes.io/name: netbox-server
    app.kubernetes.io/part-of: netbox
    version: "v3.0.7"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: netbox-server
  template:
    metadata:
      labels: *Labels
    spec:
      containers:
      - name: netbox
        image: quay.io/netboxcommunity/netbox:v3.0.7-ldap
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 128Mi
        securityContext:
          privileged: false
      securityContext:
        runAsUser: 101
        #runAsGroup: 1000
      serviceAccountName: netbox-server
---
