netbox/04-netbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  labels:
    app: netbox
spec:
  selector:
    app: netbox
  ports:
  - name: http-netbox
    port: 8080
    protocol: TCP
    targetPort: 8080
  #type: LoadBalancer
---
